{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 25,
  "lineage": "0bc448a0-e4a4-3409-7ee4-de8b6e7d0db4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899909392734:internet-gateway/igw-079d6234891211123",
            "id": "igw-079d6234891211123",
            "owner_id": "899909392734",
            "tags": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "tags_all": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "vpc_id": "vpc-0eef9779097d490b6"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899909392734:route-table/rtb-0b168bffea62d8549",
            "id": "rtb-0b168bffea62d8549",
            "owner_id": "899909392734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079d6234891211123",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "tags_all": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef9779097d490b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc",
            "aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edd291de6014b72e",
            "route_table_id": "rtb-0b168bffea62d8549",
            "subnet_id": "subnet-0ef6a12d56e92fba6"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet-pub",
            "aws_vpc.eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0057aaee6234e2b",
            "route_table_id": "rtb-0b168bffea62d8549",
            "subnet_id": "subnet-02f72c9b7007646bb"
          },
          "dependencies": [
            "aws_vpc.eks-vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.route_table",
            "aws_subnet.subnet-pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899909392734:security-group/sg-0dcbe9b2ecbb9ebea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcbe9b2ecbb9ebea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eks-secgroup-eks_dev",
            "name_prefix": "",
            "owner_id": "899909392734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "tags_all": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eef9779097d490b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899909392734:subnet/subnet-0ef6a12d56e92fba6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ef6a12d56e92fba6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899909392734",
            "tags": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "tags_all": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "vpc_id": "vpc-0eef9779097d490b6"
          },
          "dependencies": [
            "aws_vpc.eks-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899909392734:subnet/subnet-02f72c9b7007646bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02f72c9b7007646bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "899909392734",
            "tags": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "tags_all": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "vpc_id": "vpc-0eef9779097d490b6"
          },
          "dependencies": [
            "aws_vpc.eks-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899909392734:vpc/vpc-0eef9779097d490b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01729c450d3b62cbb",
            "default_route_table_id": "rtb-0aea1aaa16cbf9fa7",
            "default_security_group_id": "sg-0c562ae98ed1a8e9a",
            "dhcp_options_id": "dopt-0d9875ffadb739f78",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0eef9779097d490b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aea1aaa16cbf9fa7",
            "owner_id": "899909392734",
            "tags": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            },
            "tags_all": {
              "Product": "eks_cluster",
              "Team": "Time_1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/nginx-example",
            "metadata": [
              {
                "generation": 0,
                "name": "nginx-example",
                "namespace": "default",
                "resource_version": "1377",
                "uid": "bc3c1d6a-7df3-4523-af0a-70a1f6e2b0e1"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.15.174",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 32110,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "ScalableNginxExample"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "abc3c1d6a7df34523af0a70a1f6e2b0e-1444031382.us-east-1.elb.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_eks_node_group.eks_node",
            "aws_iam_role.eks_cluster",
            "aws_iam_role_policy_attachment.eks_node-AmazonEKSWorkerNodePolicy",
            "aws_vpc.eks-vpc",
            "data.aws_availability_zones.available",
            "aws_security_group.eks-cluster",
            "kubernetes_deployment.nginx",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.eks_node",
            "aws_iam_role_policy_attachment.eks_cluster-AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.eks_node-AmazonEC2ContainerRegistryReadOnly",
            "data.aws_eks_cluster.mycluster",
            "aws_iam_role_policy_attachment.eks_cluster-AmazonEKSServicePolicy",
            "aws_iam_role_policy_attachment.eks_node-AmazonEKS_CNI_Policy",
            "aws_subnet.subnet-pub"
          ]
        }
      ]
    }
  ]
}